--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
-<!doctype html>
-<html lang="en">
+<html class="no-js" lang="">
 <head>
   <meta charset="utf-8">
   <title>Josh</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
+
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
+
 </html>
